# prisoners-dilemma

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake.yml
res/: mat.txt  reactive.cfg  voting.cfg
src/: CMakeLists.txt  GameMatrix.cpp  GameMatrix.h  PrisonersDilemma.h  SimMatrix.cpp  SimMatrix.h  Simulation.cpp  Simulation.h  Strategy.cpp  Strategy.h  StrategyFactory.cpp  StrategyFactory.h  main.cpp
test/: CMakeLists.txt  SimulationTests.cpp  StrategyTests.cpp  tests.cpp
